Created initial transaction mechanism

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ewallet
 spring.datasource.username=postgres
 spring.datasource.password=12345
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 #server.servlet.context-path=/api/v1
 
