--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ quartz.enabled=true
 spring.quartz.job-store-type=jdbc
 spring.quartz.jdbc.initialize-schema=always
 
+springdoc.show-login-endpoint=true
+
 spring.quartz.properties.org.quartz.scheduler.instanceName=customer-unblock-scheduler
 spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
