--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ token.secret=${SECRET}
 
 quartz.enabled=true
 spring.quartz.job-store-type=jdbc
-spring.quartz.jdbc.initialize-schema=always
+spring.quartz.jdbc.initialize-schema=never
 
 springdoc.show-login-endpoint=true
 
