--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 #server.servlet.context-path=/api/v1
 
-spring.cloud.config.enabled=false
+#spring.cloud.config.enabled=false
 
 token.secret=${SECRET}
 
