--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   db:
     image: 'postgres:latest'
     restart: always
+    ports:
+      - 5432:5433
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 12345
@@ -10,19 +12,19 @@ services:
       - postgres-data:/var/lib/postgresql/data
 
   eWallet:
-    build: .
+    build: src/main/java
     restart: always
     ports:
       - 8080:8080
     depends_on:
       - db
     environment:
-      - DATABASE_URL=jdbc:postgresql://db:5432/ewallet
+      - DATABASE_URL=jdbc:postgresql://db:5433/ewallet
       - DATABASE_USERNAME=postgres
       - DATABASE_PASSWORD=12345
       - SECRET=TJVA95OrM7E2cBab30RMHrHDcEfxjoYZgeFONFh7HgQ65d1gdfd651fIDFBiondf
       # Add any additional environment variables here
-    command: bash -c "liquibase --changeLogFile=db/changelog/db.changelog-master.xml --url=jdbc:postgresql://db:5432/your_database_name --username=your_postgres_user --password=your_postgres_password update && exec catalina.sh run"
+    command: bash -c "liquibase --changeLogFile=db/changelog/changelog-main.xml --url=jdbc:postgresql://db:5432/ewallet --username=postgres --password=12345 update && exec catalina.sh run"
 
 volumes:
   postgres-data:
