added cardownership check, removed magic numbers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,11 @@ spring.jpa.hibernate.ddl-auto=update
 #server.servlet.context-path=/api/v1
 
 #spring.cloud.config.enabled=false
-
+blocked-for-transactions.limit=10
+suspicious.limit=5
+transaction.limit=2000
+transaction.withdrawal.daily.limit=5000
+transaction.suspicious.limit=10000
 token.secret=${SECRET}
 
 quartz.enabled=true
