--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
-  eWallet:
+  ewalletapi:
     build: src/main/java
     restart: always
     ports:
