fixed application startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
-#server.servlet.context-path=/api/v1
+spring.jpa.hibernate.ddl-auto=validate
 
-#spring.cloud.config.enabled=false
 blocked-for-transactions.limit=10
 suspicious.limit=5
 transaction.limit=2000
 transaction.withdrawal.daily.limit=5000
 transaction.suspicious.limit=10000
+
 token.secret=${SECRET}
+token.expiration-time=7200000
 
 quartz.enabled=true
 spring.quartz.job-store-type=jdbc
@@ -26,10 +26,10 @@ spring.quartz.properties.org.quartz.jobStore.misfireThreshold=60000
 #spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
 spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
 #spring.quartz.properties.org.quartz.jobStore.dataSource=quartzDataSource
-#spring.quartz.properties.org.quartz.dataSource.quartzDataSource.URL=jdbc:postgresql://localhost:5432/ewallet
+#spring.quartz.properties.org.quartz.dataSource.quartzDataSource.URL=${DATABASE_URL}
 #spring.quartz.properties.org.quartz.dataSource.quartzDataSource.driver=org.postgresql.Driver
-#spring.quartz.properties.org.quartz.dataSource.quartzDataSource.user=postgres
-#spring.quartz.properties.org.quartz.dataSource.quartzDataSource.password=12345
+#spring.quartz.properties.org.quartz.dataSource.quartzDataSource.user=${DATABASE_USERNAME}
+#spring.quartz.properties.org.quartz.dataSource.quartzDataSource.password=${DATABASE_PASSWORD}
 #spring.quartz.properties.org.quartz.dataSource.quartzDataSource.provider=hikaricp
 
 #spring.quartz.properties.org.quartz.jobStore.isClustered=true
