--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 changelogFile: src/main/resources/db/changelog/changelog-main.xml
 driver: org.postgresql.Driver
-url: jdbc:postgresql://localhost:5432/ewallet
+url: jdbc:postgresql://localhost:5432/wallet
 username: postgres
 password: 12345
